完整复刻：Display Entity 交互体系 + Vault 经济 + 全数据包功能
- DisplayManager: ItemDisplay 卡牌渲染 + TextDisplay 标签 + Interaction 点击区域
- EntityInteractListener: 通过 PDC key 识别点击实体，分发到 Table 方法
- EconomyManager: Vault 经济 API 集成，扣费/奖励，无 Vault 时优雅降级
- Table: 完整 Display Entity 渲染 (座位/手牌/中心牌/操作按钮)
- 玩家点击座位入座，点击手牌选牌，点击出牌/质疑按钮操作
- 完整复刻: 发牌(6A+6Q+6K+2坤)、恶魔牌替换、随机先手、30s回合倒计时
- 质疑翻牌、恶魔牌AOE、空弹/实弹射击、胜利判定、Vault 奖励/扣费
- 赌博模式开关、强制结束随机胜者、离线清理