@@ -1,23 +1,41 @@
 package com.jijifujiji.liarsbar.game;
 
 import com.jijifujiji.liarsbar.LiarsBarPlugin;
-import org.bukkit.Bukkit;
-import org.bukkit.ChatColor;
-import org.bukkit.Location;
-import org.bukkit.Sound;
-import org.bukkit.entity.Player;
+import com.jijifujiji.liarsbar.display.DisplayManager;
+import net.md_5.bungee.api.ChatMessageType;
+import net.md_5.bungee.api.chat.TextComponent;
+import org.bukkit.*;
+import org.bukkit.entity.*;
 import org.bukkit.scheduler.BukkitRunnable;
 import org.bukkit.scheduler.BukkitTask;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class Table {
+
+    private static final double[][] SEAT_OFFSETS = {
+            {2.5, 0.3, 0},    // 0: east
+            {0, 0.3, 2.5},    // 1: south
+            {-2.5, 0.3, 0},   // 2: west
+            {0, 0.3, -2.5}    // 3: north
+    };
+
+    private static final double[][] CARD_OFFSETS = {
+            {0.5, 0, 0},      // east: cards go north of seat
+            {0, 0, -0.5},     // south: cards go west of seat
+            {-0.5, 0, 0},     // west: cards go south of seat
+            {0, 0, 0.5}       // north: cards go east of seat
+    };
+
+    private static final float[] SEAT_YAWS = {90f, 180f, -90f, 0f};
 
     private final LiarsBarPlugin plugin;
     private final String id;
     private Location location;
     private final List<PlayerState> players = new ArrayList<>();
     private final List<Player> waitingPlayers = new ArrayList<>();
+    private final Map<Integer, Player> seatMap = new HashMap<>();
 
     private GameState state = GameState.IDLE;
     private BetMode betMode = BetMode.LIFE;
@@ -27,10 +45,22 @@ public class Table {
     private List<Card> centerCards = new ArrayList<>();
     private BukkitTask turnTimer;
     private int turnSecondsLeft;
-    private int pendingShots = 0;
-    private int joinedCount = 0;
+    private int pendingShots;
+    private int joinedCount;
+    private boolean isFirstRound = true;
 
-    private final Map<Player, Set<Integer>> selections = new HashMap<>();
+    // Display entities
+    private final List<Entity> displayEntities = new ArrayList<>();
+    private final List<Entity> seatInteractions = new ArrayList<>();
+    private TextDisplay modeLabel;
+    private TextDisplay statusLabel;
+    private TextDisplay turnLabel;
+    private final Map<Integer, List<ItemDisplay>> playerCardDisplays = new HashMap<>();
+    private final Map<Integer, List<Interaction>> playerCardInteractions = new HashMap<>();
+    private final List<ItemDisplay> centerCardDisplays = new ArrayList<>();
+    private Interaction playButton;
+    private Interaction challengeButton;
+    private Interaction startButton;
 
     public Table(LiarsBarPlugin plugin, String id, Location location) {
         this.plugin = plugin;
@@ -38,73 +68,219 @@ public class Table {
         this.location = location == null ? null : location.clone();
     }
 
-    public String getId() {
-        return id;
-    }
-
-    public Location getLocation() {
-        return location == null ? null : location.clone();
-    }
-
-    public void setLocation(Location location) {
-        this.location = location.clone();
-    }
-
-    public GameState getState() {
-        return state;
-    }
-
-    public BetMode getBetMode() {
-        return betMode;
-    }
-
-    public List<PlayerState> getPlayers() {
-        return new ArrayList<>(players);
-    }
-
+    public String getId() { return id; }
+    public Location getLocation() { return location == null ? null : location.clone(); }
+    public void setLocation(Location location) { this.location = location.clone(); }
+    public GameState getState() { return state; }
+    public BetMode getBetMode() { return betMode; }
     public boolean isInGame(Player player) {
-        return players.stream().anyMatch(p -> p.getPlayer().equals(player)) || waitingPlayers.contains(player);
+        return players.stream().anyMatch(p -> p.getPlayer().equals(player))
+                || waitingPlayers.contains(player)
+                || seatMap.containsValue(player);
     }
 
     public void setBetMode(BetMode mode) {
         this.betMode = mode;
+        buildDisplay();
     }
 
-    public void addWaitingPlayer(Player player) {
-        if (waitingPlayers.contains(player) || isInGame(player)) {
+    // ========== Seat & Display ==========
+
+    public void buildDisplay() {
+        clearDisplay();
+        if (location == null || location.getWorld() == null) return;
+
+        // Mode label above table
+        modeLabel = DisplayManager.spawnLabel(plugin, location.clone().add(0, 2.2, 0),
+                betMode.getDisplay(), Color.fromRGB(0x402020), false);
+
+        // Status label
+        statusLabel = DisplayManager.spawnLabel(plugin, location.clone().add(0, 1.6, 0),
+                "等待玩家加入...", Color.fromRGB(0x004400), false);
+
+        // Seat interactions
+        for (int i = 0; i < 4; i++) {
+            Location seatLoc = location.clone().add(SEAT_OFFSETS[i][0], SEAT_OFFSETS[i][1], SEAT_OFFSETS[i][2]);
+            Interaction seat = DisplayManager.spawnInteraction(plugin, seatLoc, 0.8f, 1.6f,
+                    new DisplayManager.ClickAction(DisplayManager.ClickAction.ActionType.JOIN_SEAT, id, i, -1));
+            if (seat != null) {
+                seatInteractions.add(seat);
+                displayEntities.add(seat);
+            }
+        }
+
+        // Start button
+        Location btnLoc = location.clone().add(0, 1.0, 0);
+        startButton = DisplayManager.spawnInteraction(plugin, btnLoc, 0.6f, 0.6f,
+                new DisplayManager.ClickAction(DisplayManager.ClickAction.ActionType.START_BUTTON, id, -1, -1));
+        if (startButton != null) displayEntities.add(startButton);
+
+        if (modeLabel != null) displayEntities.add(modeLabel);
+        if (statusLabel != null) displayEntities.add(statusLabel);
+    }
+
+    public void renderPlayerCards(PlayerState ps) {
+        clearPlayerDisplay(ps.getSeatIndex());
+        if (location == null || location.getWorld() == null) return;
+
+        Location seatLoc = location.clone().add(SEAT_OFFSETS[ps.getSeatIndex()][0],
+                SEAT_OFFSETS[ps.getSeatIndex()][1], SEAT_OFFSETS[ps.getSeatIndex()][2]);
+        double[] cardOff = CARD_OFFSETS[ps.getSeatIndex()];
+        float yaw = SEAT_YAWS[ps.getSeatIndex()];
+
+        List<ItemDisplay> cardDisplays = new ArrayList<>();
+        List<Interaction> cardInteractions = new ArrayList<>();
+
+        List<Card> hand = ps.getHand();
+        for (int i = 0; i < hand.size(); i++) {
+            Location cardLoc = seatLoc.clone().add(cardOff[0] * (i + 1), 0.2, cardOff[2] * (i + 1));
+            int modelData = getCardModelData(hand.get(i));
+            ItemDisplay cardDisplay = DisplayManager.spawnCard(plugin, cardLoc,
+                    hand.get(i).getDisplay(), modelData, id, ps.getSeatIndex(), i);
+            if (cardDisplay != null) {
+                DisplayManager.applyCardTransform(cardDisplay, yaw, 0.8f);
+                cardDisplays.add(cardDisplay);
+                displayEntities.add(cardDisplay);
+            }
+
+            Interaction cardInteract = DisplayManager.spawnInteraction(plugin, cardLoc, 0.5f, 0.7f,
+                    new DisplayManager.ClickAction(DisplayManager.ClickAction.ActionType.PLAY_CARD,
+                            id, ps.getSeatIndex(), i));
+            if (cardInteract != null) {
+                cardInteractions.add(cardInteract);
+                displayEntities.add(cardInteract);
+            }
+        }
+        playerCardDisplays.put(ps.getSeatIndex(), cardDisplays);
+        playerCardInteractions.put(ps.getSeatIndex(), cardInteractions);
+    }
+
+    public void renderCenterCards() {
+        clearCenterDisplay();
+        if (location == null || location.getWorld() == null) return;
+
+        for (int i = 0; i < centerCards.size(); i++) {
+            Location cardLoc = location.clone().add((i - centerCards.size() / 2.0) * 0.5, 0.8, 0);
+            int modelData = getCardModelData(centerCards.get(i));
+            ItemDisplay cardDisplay = DisplayManager.spawnCard(plugin, cardLoc,
+                    centerCards.get(i).getDisplay(), modelData, id, -1, -1);
+            if (cardDisplay != null) {
+                DisplayManager.applyCardTransform(cardDisplay, 0f, 0.6f);
+                centerCardDisplays.add(cardDisplay);
+                displayEntities.add(cardDisplay);
+            }
+        }
+    }
+
+    public void renderActionButtons(PlayerState current, boolean canChallenge) {
+        if (location == null || location.getWorld() == null) return;
+        Location seatLoc = location.clone().add(SEAT_OFFSETS[current.getSeatIndex()][0],
+                SEAT_OFFSETS[current.getSeatIndex()][1], SEAT_OFFSETS[current.getSeatIndex()][2]);
+
+        if (playButton != null) { playButton.remove(); displayEntities.remove(playButton); }
+        if (challengeButton != null) { challengeButton.remove(); displayEntities.remove(challengeButton); }
+
+        playButton = DisplayManager.spawnInteraction(plugin, seatLoc.clone().add(0, -0.3, 0), 0.5f, 0.5f,
+                new DisplayManager.ClickAction(DisplayManager.ClickAction.ActionType.PLAY_BUTTON, id, -1, -1));
+        if (playButton != null) displayEntities.add(playButton);
+
+        if (canChallenge && lastPlayer != null && lastPlayer != current) {
+            challengeButton = DisplayManager.spawnInteraction(plugin, seatLoc.clone().add(0, -0.3, 0.5), 0.5f, 0.5f,
+                    new DisplayManager.ClickAction(DisplayManager.ClickAction.ActionType.CHALLENGE_BUTTON, id, -1, -1));
+            if (challengeButton != null) displayEntities.add(challengeButton);
+        }
+    }
+
+    private void setStatus(String text) {
+        if (statusLabel != null && statusLabel.isValid()) {
+            statusLabel.setText(text);
+        }
+    }
+
+    private void clearPlayerDisplay(int seatIndex) {
+        List<ItemDisplay> cards = playerCardDisplays.remove(seatIndex);
+        if (cards != null) DisplayManager.removeManagedEntities(plugin, new ArrayList<>(cards));
+        List<Interaction> intersects = playerCardInteractions.remove(seatIndex);
+        if (intersects != null) DisplayManager.removeManagedEntities(plugin, new ArrayList<>(intersects));
+    }
+
+    private void clearCenterDisplay() {
+        DisplayManager.removeManagedEntities(plugin, new ArrayList<>(centerCardDisplays));
+        centerCardDisplays.clear();
+    }
+
+    public void clearDisplay() {
+        clearCenterDisplay();
+        for (int i = 0; i < 4; i++) clearPlayerDisplay(i);
+        DisplayManager.removeManagedEntities(plugin, new ArrayList<>(displayEntities));
+        displayEntities.clear();
+        seatInteractions.clear();
+        modeLabel = null;
+        statusLabel = null;
+        turnLabel = null;
+        playButton = null;
+        challengeButton = null;
+        startButton = null;
+    }
+
+    private int getCardModelData(Card card) {
+        return switch (card) {
+            case A -> 1;
+            case Q -> 2;
+            case K -> 3;
+            case KUN -> 4;
+            case DEMON -> 5;
+        };
+    }
+
+    // ========== Game Flow ==========
+
+    public void joinSeat(Player player, int seatIndex) {
+        if (state != GameState.IDLE && state != GameState.WAITING) {
+            player.sendMessage(ChatColor.RED + "游戏进行中，请等待下一局。");
+            return;
+        }
+        if (seatMap.containsKey(seatIndex)) {
+            Player occupant = seatMap.get(seatIndex);
+            if (occupant != null && occupant.isOnline() && !occupant.equals(player)) {
+                player.sendMessage(ChatColor.RED + "这个座位已经有人了。");
+                return;
+            }
+        }
+        if (isInGame(player)) {
             player.sendMessage(ChatColor.RED + "你已经在本桌了！");
             return;
         }
-        if (state != GameState.IDLE && state != GameState.WAITING) {
-            player.sendMessage(ChatColor.RED + "本桌游戏进行中，无法加入。");
-            return;
-        }
-        if (waitingPlayers.size() + players.size() >= 4) {
-            player.sendMessage(ChatColor.RED + "本桌已满（最多4人）。");
-            return;
-        }
-        // 赌博模式下，饭团币/坤坤币模式需要扣费
+
+        // 赌博模式扣费
         if (plugin.getConfigManager().isGamblingEnabled() && betMode != BetMode.LIFE) {
-            if (!EconomyHandler.canAfford(player, betMode)) {
-                player.sendMessage(ChatColor.RED + "你的" + betMode.getDisplay() + "不足，请拿到" + betMode.getDisplay() + "后重新加入！");
+            double cost = betMode == BetMode.FANTUAN ? 1.0 : 1.0;
+            EconomyManager eco = plugin.getEconomyManager();
+            if (!eco.isEnabled()) {
+                player.sendMessage(ChatColor.RED + "经济系统未启用，无法加入赌局。");
                 return;
             }
-            if (!EconomyHandler.pay(player, betMode)) {
-                player.sendMessage(ChatColor.RED + "扣费失败，请稍后重试。");
+            if (!eco.has(player, cost)) {
+                player.sendMessage(ChatColor.RED + "你的余额不足，需要 " + eco.format(cost) + "。");
                 return;
             }
-            broadcast(ChatColor.GOLD + player.getName() + ChatColor.GREEN + " 支付了一个" + betMode.getDisplay() + "，加入对局！");
+            if (!eco.withdraw(player, cost)) {
+                player.sendMessage(ChatColor.RED + "扣费失败。");
+                return;
+            }
+            broadcast(ChatColor.GOLD + player.getName() + ChatColor.GREEN + " 支付了 " + eco.format(cost) + "，加入赌局！");
         } else {
             broadcast(ChatColor.GOLD + player.getName() + ChatColor.GREEN + " 加入对局！");
         }
+
+        seatMap.put(seatIndex, player);
         waitingPlayers.add(player);
         joinedCount = getAllParticipants().size();
-        broadcast(ChatColor.YELLOW + "当前 " + ChatColor.GOLD + joinedCount + ChatColor.YELLOW + " 人加入游戏。");
+        setStatus("玩家: " + joinedCount + "/4");
         player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_XYLOPHONE, 1f, 1.34f);
-        if (state == GameState.IDLE) {
-            state = GameState.WAITING;
-        }
-        // 满4人自动开始
+
+        if (state == GameState.IDLE) state = GameState.WAITING;
+
         if (getAllParticipants().size() >= 4) {
             startGame(player);
         }
@@ -113,31 +289,35 @@ public class Table {
     public void removePlayer(Player player) {
         waitingPlayers.remove(player);
         players.removeIf(p -> p.getPlayer().equals(player));
+        seatMap.values().removeIf(p -> p.equals(player));
         if (players.isEmpty() && waitingPlayers.isEmpty()) {
             state = GameState.IDLE;
+            clearDisplay();
+            buildDisplay();
         }
         broadcast(ChatColor.GOLD + player.getName() + ChatColor.YELLOW + " 离开了游戏。");
+        joinedCount = getAllParticipants().size();
+        setStatus("玩家: " + joinedCount + "/4");
     }
 
     public List<Player> getAllParticipants() {
         List<Player> all = new ArrayList<>(waitingPlayers);
         for (PlayerState ps : players) {
-            if (!all.contains(ps.getPlayer())) {
-                all.add(ps.getPlayer());
-            }
+            if (!all.contains(ps.getPlayer())) all.add(ps.getPlayer());
         }
         return all;
     }
 
     public void startGame(Player starter) {
         if (state != GameState.WAITING && state != GameState.IDLE) {
-            starter.sendMessage(ChatColor.RED + "游戏不处于可开始状态。");
+            if (starter != null) starter.sendMessage(ChatColor.RED + "游戏不处于可开始状态。");
             return;
         }
         if (waitingPlayers.size() < 2) {
-            starter.sendMessage(ChatColor.RED + "至少需要 2 名玩家才能开始。");
+            if (starter != null) starter.sendMessage(ChatColor.RED + "至少需要 2 名玩家。");
             return;
         }
+
         players.clear();
         for (int i = 0; i < waitingPlayers.size(); i++) {
             players.add(new PlayerState(waitingPlayers.get(i), i));
@@ -146,6 +326,7 @@ public class Table {
         joinedCount = players.size();
         state = GameState.DEALING;
         broadcast(ChatColor.YELLOW + "游戏开始！模式：" + ChatColor.GOLD + ChatColor.BOLD + betMode.getDisplay());
+        isFirstRound = true;
         startRound();
     }
 
@@ -153,6 +334,7 @@ public class Table {
         centerCards.clear();
         mainCard = Card.randomMainType();
 
+        // 构建牌堆: 6A + 6Q + 6K + 2坤 + 1恶魔
         List<Card> deck = new ArrayList<>();
         for (int i = 0; i < 6; i++) deck.add(Card.A);
         for (int i = 0; i < 6; i++) deck.add(Card.Q);
@@ -161,20 +343,16 @@ public class Table {
         deck.add(Card.KUN);
         Collections.shuffle(deck);
 
+        // 从主牌中随机选一张替换为恶魔牌
         List<Integer> mainIndices = new ArrayList<>();
         for (int i = 0; i < deck.size(); i++) {
-            if (deck.get(i).matchesMain(mainCard)) {
-                mainIndices.add(i);
-            }
+            if (deck.get(i).matchesMain(mainCard)) mainIndices.add(i);
         }
         if (!mainIndices.isEmpty()) {
-            int demonIndex = mainIndices.get((int) (Math.random() * mainIndices.size()));
-            deck.set(demonIndex, Card.DEMON);
+            deck.set(mainIndices.get((int) (Math.random() * mainIndices.size())), Card.DEMON);
         }
 
-        for (PlayerState ps : players) {
-            ps.resetForNewRound();
-        }
+        for (PlayerState ps : players) ps.resetForNewRound();
 
         int cardIndex = 0;
         for (PlayerState ps : players) {
@@ -183,12 +361,16 @@ public class Table {
             }
         }
 
-        broadcast(ChatColor.YELLOW + "新的一轮开始了！本局主牌是：" + ChatColor.GOLD + ChatColor.BOLD + "[{ " + mainCard.getDisplay() + " }]");
+        broadcast(ChatColor.YELLOW + "新的一轮！主牌：" + ChatColor.GOLD + ChatColor.BOLD + "[{ " + mainCard.getDisplay() + " }]");
 
-        currentPlayerIndex = (int) (Math.random() * players.size());
+        // 随机先手
+        if (isFirstRound) {
+            currentPlayerIndex = (int) (Math.random() * players.size());
+            isFirstRound = false;
+        }
         lastPlayer = null;
         state = GameState.PLAYING;
-        startTurn(false);
+        startTurn(true);
     }
 
     private void startTurn(boolean standard) {
@@ -203,11 +385,23 @@ public class Table {
         cancelTurnTimer();
         turnSecondsLeft = 30;
 
-        current.getPlayer().sendTitle(ChatColor.GREEN + ChatColor.BOLD.toString() + ">>>你的回合<<<", "", 10, 70, 20);
+        current.getPlayer().sendTitle(ChatColor.GREEN + ">>>你的回合<<<", "", 10, 70, 20);
         current.getPlayer().playSound(current.getPlayer().getLocation(), Sound.BLOCK_ANVIL_PLACE, 1f, 1f);
 
-        sendHand(current);
-        sendActionButtons(current, standard);
+        // 渲染当前玩家的手牌
+        renderPlayerCards(current);
+        renderActionButtons(current, standard && lastPlayer != null && lastPlayer != current);
+
+        // 渲染中心牌
+        if (!centerCards.isEmpty()) renderCenterCards();
+
+        // 更新状态标签
+        setStatus(standard ? (current.getPlayer().getName() + " 的回合") : "先手回合");
+
+        for (PlayerState ps : players) {
+            if (ps == current) continue;
+            ps.getPlayer().sendMessage(ChatColor.YELLOW + "当前是 " + ChatColor.GOLD + current.getPlayer().getName() + ChatColor.YELLOW + " 的回合");
+        }
 
         PlayerState finalCurrent = current;
         turnTimer = new BukkitRunnable() {
@@ -222,46 +416,20 @@ public class Table {
         }.runTaskTimer(plugin, 20L, 20L);
     }
 
-    private void sendHand(PlayerState ps) {
-        StringBuilder msg = new StringBuilder(ChatColor.YELLOW + "你的手牌： ");
-        List<Card> hand = ps.getHand();
-        for (int i = 0; i < hand.size(); i++) {
-            Card c = hand.get(i);
-            msg.append(ChatColor.WHITE).append("[").append(i + 1).append("]").append(c.getDisplay()).append(" ");
+    public void selectCard(Player player, int cardIndex) {
+        PlayerState ps = findState(player);
+        if (ps == null || ps != players.get(currentPlayerIndex)) {
+            player.sendMessage(ChatColor.RED + "现在不是你的回合。");
+            return;
         }
-        msg.append(ChatColor.GOLD).append("  主牌：").append(mainCard.getDisplay());
-        ps.getPlayer().sendMessage(msg.toString());
-    }
-
-    private void sendActionButtons(PlayerState current, boolean canChallenge) {
-        Player p = current.getPlayer();
-        p.sendMessage(ChatColor.YELLOW + "请选择要出的手牌（点击数字切换选择，然后点出牌）：");
-
-        StringBuilder selectRow = new StringBuilder(ChatColor.YELLOW + "选择： ");
-        int max = Math.min(5, current.getHand().size());
-        for (int i = 1; i <= max; i++) {
-            selectRow.append(ChatColor.RED).append("[").append(i).append("]").append(ChatColor.RESET).append(" ");
-        }
-        p.sendMessage(selectRow.toString());
-        p.sendMessage(ChatColor.GRAY + "（请使用命令：/liarbar select " + id + " <序号>）");
-
-        StringBuilder actionRow = new StringBuilder(ChatColor.YELLOW + "操作： ");
-        actionRow.append(ChatColor.GREEN).append(ChatColor.BOLD).append("[出牌]").append(ChatColor.RESET);
-        if (canChallenge && lastPlayer != null && lastPlayer != current) {
-            actionRow.append("  ").append(ChatColor.RED).append(ChatColor.BOLD).append("[质疑/开牌]");
-        }
-        p.sendMessage(actionRow.toString());
-        p.sendMessage(ChatColor.GRAY + "出牌：/liarbar play " + id + "    质疑：/liarbar challenge " + id);
-    }
-
-    public void toggleSelection(Player player, int index) {
-        Set<Integer> sel = selections.computeIfAbsent(player, k -> new HashSet<>());
-        if (sel.contains(index)) {
-            sel.remove(index);
-            player.sendMessage(ChatColor.RED + "取消选择第 " + index + " 张牌");
+        ps.toggleSelection(cardIndex);
+        player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_HAT, 1f, 1.2f);
+        if (ps.getSelected().contains(cardIndex)) {
+            player.spigot().sendMessage(ChatMessageType.ACTION_BAR, TextComponent.fromLegacyText(
+                    ChatColor.GREEN + "已选择第 " + (cardIndex + 1) + " 张牌 [" + ps.getHand().get(cardIndex).getDisplay() + "]"));
         } else {
-            sel.add(index);
-            player.sendMessage(ChatColor.GREEN + "选择第 " + index + " 张牌");
+            player.spigot().sendMessage(ChatMessageType.ACTION_BAR, TextComponent.fromLegacyText(
+                    ChatColor.RED + "已取消第 " + (cardIndex + 1) + " 张牌"));
         }
     }
 
@@ -271,36 +439,33 @@ public class Table {
             player.sendMessage(ChatColor.RED + "现在不是你的回合。");
             return;
         }
-        Set<Integer> sel = selections.getOrDefault(player, Collections.emptySet());
+        List<Integer> sel = ps.getSortedSelection();
         if (sel.isEmpty()) {
-            player.sendMessage(ChatColor.RED + "请先选择要出的牌。");
+            player.sendMessage(ChatColor.RED + "请先点击选择要出的牌。");
             return;
         }
-        List<Integer> indices = new ArrayList<>(sel);
-        Collections.sort(indices);
-        if (indices.size() > 3) {
+        if (sel.size() > 3) {
             player.sendMessage(ChatColor.RED + "一次最多出 3 张牌。");
             return;
         }
 
-        List<Card> played = new ArrayList<>();
-        boolean hasDemon = false;
-        for (int idx : indices) {
-            Card c = ps.getHand().get(idx - 1);
-            played.add(c);
-            if (c == Card.DEMON) hasDemon = true;
-        }
+        List<Card> played = sel.stream().map(i -> ps.getHand().get(i)).collect(Collectors.toList());
+        boolean hasDemon = played.contains(Card.DEMON);
         if (hasDemon && played.size() > 1) {
             player.sendMessage(ChatColor.RED + "恶魔牌只能单出！");
             return;
         }
 
-        ps.removeCards(indices.stream().map(i -> i - 1).toList());
+        ps.removeCards(sel);
         centerCards = new ArrayList<>(played);
         lastPlayer = ps;
-        selections.remove(player);
+        ps.clearSelection();
 
         broadcast(ChatColor.GOLD + player.getName() + ChatColor.YELLOW + " 出了 " + ChatColor.GOLD + played.size() + ChatColor.YELLOW + " 张牌。");
+
+        clearPlayerDisplay(ps.getSeatIndex());
+        clearCenterDisplay();
+        renderCenterCards();
 
         currentPlayerIndex = nextIndex(currentPlayerIndex);
         startTurn(true);
@@ -313,44 +478,37 @@ public class Table {
             return;
         }
         if (lastPlayer == null || lastPlayer == ps) {
-            player.sendMessage(ChatColor.RED + "现在没有可质疑的牌。");
+            player.sendMessage(ChatColor.RED + "没有可质疑的牌。");
             return;
         }
         cancelTurnTimer();
         state = GameState.RESOLVING;
-        selections.remove(player);
+        ps.clearSelection();
 
         broadcast(ChatColor.GOLD + player.getName() + ChatColor.YELLOW + " 质疑了 " + ChatColor.RED + ChatColor.BOLD + lastPlayer.getPlayer().getName());
+
+        renderCenterCards();
 
         boolean hasDemon = centerCards.stream().anyMatch(c -> c == Card.DEMON);
         boolean allMainOrWild = centerCards.stream().allMatch(c -> c.isMainOrWild(mainCard));
 
         StringBuilder reveal = new StringBuilder(ChatColor.YELLOW + "翻开的牌： ");
-        for (Card c : centerCards) {
-            reveal.append("[").append(c.getDisplay()).append("] ");
-        }
+        for (Card c : centerCards) reveal.append("[").append(c.getDisplay()).append("] ");
         broadcast(reveal.toString());
 
         if (hasDemon) {
-            broadcast(ChatColor.YELLOW + "哦！是" + ChatColor.RED + ChatColor.BOLD + "恶魔牌" + ChatColor.YELLOW + "，除了出牌者所有人都要遭殃！");
-            List<PlayerState> targets = new ArrayList<>();
-            for (PlayerState other : players) {
-                if (other != lastPlayer && other.isAlive()) {
-                    targets.add(other);
-                }
-            }
+            broadcast(ChatColor.YELLOW + "哦！是" + ChatColor.RED + ChatColor.BOLD + "恶魔牌" + ChatColor.YELLOW + "，除了出牌者所有人都要挨枪！");
+            List<PlayerState> targets = players.stream()
+                    .filter(p -> p != lastPlayer && p.isAlive()).collect(Collectors.toList());
             pendingShots = targets.size();
             if (pendingShots == 0) {
-                Bukkit.getScheduler().runTask(plugin, () -> {
-                    if (!checkWin()) {
-                        state = GameState.PLAYING;
-                        currentPlayerIndex = nextAliveIndex(currentPlayerIndex);
-                        startTurn(true);
-                    }
-                });
+                afterResolution();
             } else {
                 for (PlayerState target : targets) {
-                    shoot(target, () -> onDemonShotComplete(target));
+                    shoot(target, () -> {
+                        pendingShots--;
+                        if (pendingShots <= 0) afterResolution();
+                    });
                 }
             }
             return;
@@ -358,40 +516,15 @@ public class Table {
 
         PlayerState loser;
         if (!allMainOrWild) {
-            broadcast(ChatColor.YELLOW + "哦！不是" + ChatColor.RED + ChatColor.BOLD + "主牌" + ChatColor.YELLOW + "，" + ChatColor.GOLD + lastPlayer.getPlayer().getName() + ChatColor.YELLOW + " 冲着自己来一枪吧！");
+            broadcast(ChatColor.YELLOW + "不是" + ChatColor.RED + ChatColor.BOLD + "主牌" + ChatColor.YELLOW + "！" +
+                    ChatColor.GOLD + lastPlayer.getPlayer().getName() + ChatColor.YELLOW + " 冲着自己来一枪吧！");
             loser = lastPlayer;
         } else {
-            broadcast(ChatColor.YELLOW + "哇！是" + ChatColor.RED + ChatColor.BOLD + "主牌" + ChatColor.YELLOW + "，" + ChatColor.GOLD + player.getName() + ChatColor.YELLOW + " 按下扳机吧！");
+            broadcast(ChatColor.YELLOW + "是" + ChatColor.RED + ChatColor.BOLD + "主牌" + ChatColor.YELLOW + "！" +
+                    ChatColor.GOLD + player.getName() + ChatColor.YELLOW + " 按下扳机吧！");
             loser = ps;
         }
-        shoot(loser, () -> afterShoot(loser));
-    }
-
-    private void afterShoot(PlayerState victim) {
-        Bukkit.getScheduler().runTask(plugin, () -> {
-            if (checkWin()) return;
-            state = GameState.PLAYING;
-            currentPlayerIndex = nextAliveIndex(currentPlayerIndex);
-            startTurn(true);
-        });
-    }
-
-    private void onDemonShotComplete(PlayerState victim) {
-        Bukkit.getScheduler().runTask(plugin, () -> {
-            pendingShots--;
-            if (pendingShots <= 0) {
-                if (!checkWin()) {
-                    state = GameState.PLAYING;
-                    currentPlayerIndex = nextAliveIndex(currentPlayerIndex);
-                    startTurn(true);
-                }
-            }
-        });
-    }
-
-    private void handleTimeout(PlayerState ps) {
-        broadcast(ChatColor.GOLD + ps.getPlayer().getName() + ChatColor.YELLOW + " 回合超时，自动质疑上家。");
-        challenge(ps.getPlayer());
+        shoot(loser, this::afterResolution);
     }
 
     private void shoot(PlayerState ps, Runnable callback) {
@@ -400,82 +533,116 @@ public class Table {
         int roll = (int) (Math.random() * bullets) + 1;
         boolean real = roll == 1;
 
-        if (real) {
-            p.getWorld().playSound(p.getLocation(), Sound.ENTITY_GENERIC_EXPLODE, 1f, 1.51f);
-            broadcast(ChatColor.GOLD + p.getName() + ChatColor.DARK_RED + " 的脑袋被开了瓢。");
-            ps.setAlive(false);
-            ps.setBullets(0);
-        } else {
-            p.getWorld().playSound(p.getLocation(), Sound.BLOCK_STONE_BUTTON_CLICK_OFF, 1f, 0.97f);
-            broadcast(ChatColor.GOLD + p.getName() + ChatColor.GREEN + " 运气不错，是一发空弹。");
-            ps.setBullets(bullets - 1);
-        }
+        p.getWorld().playSound(p.getLocation(), Sound.ENTITY_DRAGON_FIREBALL_EXPLODE, 0.5f, 1.5f);
 
-        Bukkit.getScheduler().runTaskLater(plugin, callback, 40L);
+        Bukkit.getScheduler().runTaskLater(plugin, () -> {
+            if (real) {
+                p.getWorld().playSound(p.getLocation(), Sound.ENTITY_GENERIC_EXPLODE, 1f, 1.51f);
+                p.getWorld().spawnParticle(Particle.FLAME, p.getLocation().add(0, 1.7, 0), 20, 0.2, 0.2, 0.2, 0.05);
+                p.getWorld().spawnParticle(Particle.SMOKE_LARGE, p.getLocation().add(0, 1.7, 0), 10, 0.2, 0.2, 0.2, 0.02);
+                broadcast(ChatColor.GOLD + p.getName() + ChatColor.DARK_RED + " 的脑袋被开了瓢。");
+                ps.setAlive(false);
+                ps.setBullets(0);
+                p.setHealth(0);
+            } else {
+                p.getWorld().playSound(p.getLocation(), Sound.BLOCK_STONE_BUTTON_CLICK_OFF, 1f, 0.97f);
+                broadcast(ChatColor.GOLD + p.getName() + ChatColor.GREEN + " 运气不错，空弹！子弹剩余 " + (bullets - 1) + " 发。");
+                ps.setBullets(bullets - 1);
+            }
+            callback.run();
+        }, 40L);
+    }
+
+    private void afterResolution() {
+        Bukkit.getScheduler().runTask(plugin, () -> {
+            if (checkWin()) return;
+            state = GameState.PLAYING;
+            currentPlayerIndex = nextAliveIndex(currentPlayerIndex);
+            clearCenterDisplay();
+            startTurn(true);
+        });
+    }
+
+    private void handleTimeout(PlayerState ps) {
+        broadcast(ChatColor.GOLD + ps.getPlayer().getName() + ChatColor.YELLOW + " 回合超时，自动质疑。");
+        challenge(ps.getPlayer());
     }
 
     private boolean checkWin() {
         List<PlayerState> aliveWithCards = players.stream()
-                .filter(p -> p.isAlive() && p.hasCards()).toList();
+                .filter(p -> p.isAlive() && p.hasCards()).collect(Collectors.toList());
+
         if (aliveWithCards.size() <= 1) {
             state = GameState.ENDED;
+            cancelTurnTimer();
+            clearDisplay();
+
             PlayerState winner = aliveWithCards.isEmpty() ? null : aliveWithCards.get(0);
             if (winner != null) {
-                broadcast(ChatColor.YELLOW + "恭喜 " + ChatColor.GOLD + ChatColor.BOLD + winner.getPlayer().getName() + ChatColor.YELLOW + " 获得了本局骗子酒馆的胜利！赢得了 " + ChatColor.GOLD + joinedCount + ChatColor.YELLOW + " 个" + betMode.getDisplay() + "！");
-                winner.getPlayer().getWorld().spawnParticle(org.bukkit.Particle.FIREWORKS_SPARK, winner.getPlayer().getLocation().add(0, 2, 0), 30);
-                EconomyHandler.rewardWinner(winner.getPlayer(), betMode, joinedCount);
+                broadcast(ChatColor.GOLD + ChatColor.BOLD + "=== 游戏结束 ===");
+                broadcast(ChatColor.YELLOW + "恭喜 " + ChatColor.GOLD + ChatColor.BOLD + winner.getPlayer().getName() +
+                        ChatColor.YELLOW + " 获得了胜利！");
+
+                if (plugin.getConfigManager().isGamblingEnabled() && betMode != BetMode.LIFE) {
+                    EconomyManager eco = plugin.getEconomyManager();
+                    double reward = joinedCount * 1.0;
+                    if (eco.isEnabled()) {
+                        eco.deposit(winner.getPlayer(), reward);
+                        broadcast(ChatColor.YELLOW + "赢得 " + ChatColor.GOLD + eco.format(reward) + ChatColor.YELLOW + "！");
+                    }
+                }
+                winner.getPlayer().getWorld().spawnParticle(Particle.FIREWORKS_SPARK,
+                        winner.getPlayer().getLocation().add(0, 2, 0), 30, 0.5, 0.5, 0.5, 0.1);
+                broadcast(ChatColor.GREEN + "本局获胜：下注模式 " + betMode.getDisplay() + " > " + ChatColor.GOLD + winner.getPlayer().getName());
             } else {
                 broadcast(ChatColor.YELLOW + "所有玩家都出局了，本局没有胜者。");
             }
-            cleanup();
+
+            Bukkit.getScheduler().runTaskLater(plugin, () -> {
+                players.clear();
+                waitingPlayers.clear();
+                seatMap.clear();
+                state = GameState.IDLE;
+                buildDisplay();
+            }, 100L);
             return true;
         }
         return false;
     }
 
-    private void cleanup() {
-        cancelTurnTimer();
-        Bukkit.getScheduler().runTaskLater(plugin, () -> {
-            players.clear();
-            waitingPlayers.clear();
-            state = GameState.IDLE;
-        }, 100L);
-    }
-
     public void endGame(Player sender) {
         cancelTurnTimer();
         state = GameState.ENDED;
+        clearDisplay();
         broadcast(ChatColor.YELLOW + "游戏被 " + sender.getName() + " 强制结束。");
-        // 赌博模式下强制结束会随机选一个胜者
+
         if (plugin.getConfigManager().isGamblingEnabled() && betMode != BetMode.LIFE && !players.isEmpty()) {
-            List<PlayerState> alive = players.stream().filter(PlayerState::isAlive).toList();
-            if (!alive.isEmpty()) {
-                PlayerState randomWinner = alive.get((int) (Math.random() * alive.size()));
-                broadcast(ChatColor.YELLOW + "有人拉了结束按钮，随机玩家 " + ChatColor.GOLD + randomWinner.getPlayer().getName() + ChatColor.YELLOW + " 成为胜者！");
-                EconomyHandler.rewardWinner(randomWinner.getPlayer(), betMode, joinedCount);
+            List<PlayerState> alive = players.stream().filter(PlayerState::isAlive).collect(Collectors.toList());
+            PlayerState randomWinner = alive.isEmpty() ? players.get((int) (Math.random() * players.size()))
+                    : alive.get((int) (Math.random() * alive.size()));
+            broadcast(ChatColor.YELLOW + "有人强制结束，随机胜者：" + ChatColor.GOLD + randomWinner.getPlayer().getName());
+            EconomyManager eco = plugin.getEconomyManager();
+            if (eco.isEnabled()) {
+                eco.deposit(randomWinner.getPlayer(), joinedCount * 1.0);
             }
         }
+
         players.clear();
         waitingPlayers.clear();
+        seatMap.clear();
         state = GameState.IDLE;
+        buildDisplay();
     }
 
-    private int nextIndex(int current) {
-        return (current + 1) % players.size();
-    }
+    private int nextIndex(int current) { return (current + 1) % players.size(); }
 
     private int nextAliveIndex(int current) {
-        int idx = (current + 1) % players.size();
-        int attempts = 0;
-        while (attempts < players.size()) {
-            PlayerState ps = players.get(idx);
-            if (ps.isAlive() && ps.hasCards()) {
-                return idx;
-            }
-            idx = (idx + 1) % players.size();
-            attempts++;
+        for (int i = 0; i < players.size(); i++) {
+            current = (current + 1) % players.size();
+            PlayerState ps = players.get(current);
+            if (ps.isAlive() && ps.hasCards()) return current;
         }
-        return idx;
+        return current;
     }
 
     private PlayerState findState(Player player) {
@@ -483,23 +650,20 @@ public class Table {
     }
 
     private void cancelTurnTimer() {
-        if (turnTimer != null) {
-            turnTimer.cancel();
-            turnTimer = null;
-        }
+        if (turnTimer != null) { turnTimer.cancel(); turnTimer = null; }
     }
 
     private void broadcast(String message) {
-        for (Player p : getAllParticipants()) {
-            p.sendMessage(message);
-        }
+        for (Player p : getAllParticipants()) p.sendMessage(message);
     }
 
     public void destroy() {
         cancelTurnTimer();
-        broadcast(ChatColor.YELLOW + "本桌已被删除。");
+        clearDisplay();
+        for (Player p : getAllParticipants()) p.sendMessage(ChatColor.YELLOW + "本桌已被删除。");
         players.clear();
         waitingPlayers.clear();
+        seatMap.clear();
     }
 
     public String getInfo() {
